# FAR-MARS

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING  CONTRIBUTING.md  README  README.md  TODO.md
controlsoftware/: CMakeLists.txt  Makefile  README  about.cpp  about.h  about.ui  com.h  controlsoftware  controlsoftware.pro  csv.cpp  csv.h  data_prepare.py  liveplot.cpp  liveplot.h  liveplot.ui  log_data.csv  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messages.h  news.cpp  news.ui  plot.py  qcgaugewidget.cpp  qcgaugewidget.h  serial.cpp  serial.h  warning.cpp  warning.h
controlsoftware/docs/html/: about_8cpp.html  about_8cpp__incl.dot  about_8cpp__incl.md5  about_8h.html  about_8h__dep__incl.dot  about_8h__dep__incl.md5  about_8h__incl.dot  about_8h__incl.md5  about_8h_source.html  annotated.html  annotated_dup.js  api_8md.html  bno055_8h.html  bno055_8h_source.html  class_qc_arc_item-members.html  class_qc_arc_item.html  class_qc_arc_item.js  class_qc_attitude_meter.html  (+365 more)
controlsoftware/include/: com.h  mainwindow.h  serial.h
controlsoftware/linux/: Makefile  about.ui  controlsoftware.pro  logger.h  main.cpp  mainwindow.cpp  mainwindow.ui  news.ui  warning.ui
controlsoftware/raw_serial/: CMakeLists.txt  README  plot.py  pressuretest.c  raw_serial.h  raw_serial_monitor.c  raw_serial_sender.c  read  send
controlsoftware/windows/: Makefile  Makefile.Debug  Makefile.Release  logger.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  serial.cpp  serial.h  test.csv  ui_about.h  ui_mainwindow.h  ui_news.h  ui_warning.h  warning.cpp
(+126 files in other folders)
